I changed the global small text font color because the color failed accessibility contrast, Im aware this will effect things in other places. Will fix on seperate branch

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -24,7 +24,7 @@
     font-size: 14px;
     line-height: 1.5;
     font-weight: 400;
-    color: $font-color;
+    color: $header-font-color;
 }
 
 .med-font {
